--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,14 @@ a {
   box-sizing: border-box;
 }
 
+nav {
+  margin-top: 1rem;
+  padding-left: 1rem;
+  background-color: #0070f3;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
